--- a/easyframework-root/pom.xml
+++ b/easyframework-root/pom.xml
@@ -381,6 +381,12 @@
 		<version>1.0</version>
 	</dependency>
 	
+	<dependency>
+		<groupId>com.leixl.easyframework</groupId>
+		<artifactId>jmagick</artifactId>
+		<version>1.0</version>
+	</dependency>
+	
   </dependencies>
   </dependencyManagement>
   
