--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/web.xml
@@ -48,19 +48,6 @@
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>processTime</filter-name>
-		<url-pattern>*.jspx</url-pattern>
-	</filter-mapping>
-	
-	<filter-mapping>
-		<filter-name>encoding</filter-name>
-		<url-pattern>*.jspx</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>osivFilter</filter-name>
-		<url-pattern>*.jspx</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>processTime</filter-name>
 		<url-pattern>*.jhtml</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
@@ -83,18 +70,7 @@
 		<filter-name>osivFilter</filter-name>
 		<url-pattern>*.htm</url-pattern>
 	</filter-mapping>
-	<filter-mapping>
-		<filter-name>processTime</filter-name>
-		<url-pattern>*.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>encoding</filter-name>
-		<url-pattern>*.jsp</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>osivFilter</filter-name>
-		<url-pattern>*.jsp</url-pattern>
-	</filter-mapping>
+
 	
 	
 	<servlet>
@@ -103,6 +79,16 @@
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath:META-INF/config/easy-servlet-admin.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>EasyFront</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:META-INF/config/easy-servlet-front.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -123,12 +109,16 @@
 		<url-pattern>/myadmin/*</url-pattern>
 	</servlet-mapping>
 	
+	<servlet-mapping>
+		<servlet-name>EasyFront</servlet-name>
+		<url-pattern>*.htm</url-pattern>
+	</servlet-mapping>
+	
 	<session-config>
 		<session-timeout>20</session-timeout>
 	</session-config>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.shtml</welcome-file>
 		<welcome-file>index.jhtml</welcome-file>
 	</welcome-file-list>
 	<error-page>
