--- a/easyframework-root/pom.xml
+++ b/easyframework-root/pom.xml
@@ -87,10 +87,16 @@
 	  <artifactId>commons-httpclient</artifactId>
 	  <version>3.1</version>
 	</dependency>
+	
 	<dependency>
 		<groupId>org.apache.httpcomponents</groupId>
 		<artifactId>httpclient</artifactId>
 		<version>4.1-alpha2</version>
+	</dependency>
+	<dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.3.1</version>
 	</dependency>
 
 	<dependency>
@@ -321,12 +327,18 @@
 	<dependency>
 	        <groupId>us.codecraft</groupId>
 	        <artifactId>webmagic-core</artifactId>
-	        <version>0.4.1</version>
+	        <version>0.4.3</version>
 	</dependency>
 	<dependency>
 		<groupId>us.codecraft</groupId>
 		<artifactId>webmagic-extension</artifactId>
-		<version>0.4.1</version>
+		<version>0.4.3</version>
+		<exclusions>
+			<exclusion>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+			</exclusion>
+		</exclusions>
 	</dependency>
 	
 	<dependency>
@@ -355,6 +367,18 @@
 	   <groupId>org.freemarker</groupId>
 	   <artifactId>freemarker</artifactId>
 	   <version>2.3.16</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>2.5</version>
+	 </dependency>
+	 
+	 <dependency>
+		<groupId>javassist</groupId>
+		<artifactId>javassist</artifactId>
+		<version>3.12.1.GA</version>
 	</dependency>
 	
   </dependencies>
